--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,9 @@ dependencies {
     //Circle Image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    //Spinner with search
+    implementation 'com.toptoche.searchablespinner:searchablespinnerlibrary:1.3.1'
+
 //    Crop
 //    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 
