--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
-//        jcenter()
+        jcenter()
 //        maven { url 'https://jitpack.io' }
     }
 }
@@ -12,7 +12,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-//        jcenter()
+        jcenter()
 //        maven { url 'https://jitpack.io' }
 
     }
